USAGOV-1469-Homepage-changes-grid-alignment: Fix how do I box

--- a/web/themes/custom/usagov/sass/_homepage.scss
+++ b/web/themes/custom/usagov/sass/_homepage.scss
@@ -410,7 +410,7 @@
     margin-left: auto;
     margin-right: auto;
     margin-top: 40px;
-    max-width: 1024px;
+    max-width: 1124px;
     padding-top: 18px;
   }
 
@@ -440,6 +440,7 @@
     margin: 65px 5vw 0;
     padding-left: 58px;
   }
+
 }
 
 /* Extra large screens */
@@ -461,4 +462,7 @@
     flex-wrap: nowrap;
   }
 
+  .how-box {
+    width: 1124px;
+  }
 }
